--- a/Docs/Paper/LaTex/template.tex
+++ b/Docs/Paper/LaTex/template.tex
@@ -176,7 +176,7 @@ There is no single method available for solving all optimization problems effici
   \end{cases}
 \end{equation}
 
-In some cases, the time to find a solution using ILP is impractical. Even with the use of powerful computers, a problem can take hours before an optimal solution is reached. If the optimization problem is complex, some heuristics can be used to solve the same problem faster, e.g., those used in the GA~\cite{Rao2009}. The only drawback is that the found solution may not be the global minimum or maximum. Alternatively, tools such as vZ and ESBMC can be used to solve optimization problems so that the global minimum or maximum solution is found. The following sections describe the main features of vZ and ESBMC tools.
+In some cases, the time to find a solution using ILP is impractical. Even with the use of powerful computers, a problem can take hours before an optimal solution is reached. If the optimization problem is complex, some heuristics can be used to solve the same problem faster, {\it e.g.}, those used in the GA~\cite{Rao2009}. The only drawback is that the found solution may not be the global minimum or maximum. Alternatively, tools such as vZ and ESBMC can be used to solve optimization problems so that the global minimum or maximum solution is found. The following sections describe the main features of vZ and ESBMC tools.
 
 %----------------------------------------------
 \subsection{Bounded Model Checking with ESBMC}
@@ -197,7 +197,7 @@ There are two directives in C/C++ that can be used to guide a model checker to s
 \subsection{OpenMP}
 \label{OpenMP}
 %----------------------------------------------
-The OpenMP is a set of directives for parallel programming that augments C/C$++$ and Fortran languages. OpenMP supports most processor architectures and operating systems, e.g., Solaris, AIX, HP-UX, Linux, Mac OS X, and Windows. OpenMP uses a portable and very robust model that makes easy for programmers to develop parallel applications for a variety of platforms. 
+The OpenMP is a set of directives for parallel programming that augments C/C$++$ and Fortran languages. OpenMP supports most processor architectures and operating systems, {\it e.g.}, Solaris, AIX, HP-UX, Linux, Mac OS X, and Windows. OpenMP uses a portable and very robust model that makes easy for programmers to develop parallel applications for a variety of platforms. 
 
 In particular, OpenMP uses the fork-join model of parallel execution ~\cite{OpenMP1998}. The main thread executes the sequential parts of the program; if a parallel region is encountered, then it forks a team of worker threads. After the parallel region finishes ({\it i.e.}, the API waits until all threads terminate), then the main procedure gets back to the single-threaded execution mode~\cite{Wu2014}.
 
@@ -220,7 +220,7 @@ There is also a way to specify critical regions, which is a block of code that i
 \label{Optimization-with-Vz}
 %----------------------------------------------
 
-An SMT solver is a tool that verifies formula satisfiability based on a set of background theories (e.g., linear arithmetic, bitvectors, and arrays). \textcolor{red}{Z3 is built on the a Davis–Putnam–Logemann–Loveland algorithm together with auxiliary algorithms for solving quantifiers formulas~\cite{Bjorner2014}}. vZ is one of the tools implemented in the SMT solver Z3; its base function is to optimize objective functions, which formulate optimized criteria, within the logical context of constraints.  vZ includes an incremental version of  \textcolor{red}{Maximum Resiliency (MaxRes) ~\cite{Federica2008} to Maximum Satisfiability (MaxSAT)~\cite{NarodytskaN}} and a Simplex to solve numbers without defined patterns. In Vz, MaxSAT is responsible for the restrictions, while OptSMT optimizes linear arithmetic objectives~\cite{Bjorner2015}. Vz provides functions that extend Z3 for solving optimization problems: \textit{maximize}, \textit{minimize}, and \textit{assert-soft}.
+An SMT solver is a tool that verifies formula satisfiability based on a set of background theories ({\it e.g.}, linear arithmetic, bitvectors, and arrays). \textcolor{red}{Z3 is built on the a Davis–Putnam–Logemann–Loveland algorithm together with auxiliary algorithms for solving quantifiers formulas~\cite{Bjorner2014}}. vZ is one of the tools implemented in the SMT solver Z3; its base function is to optimize objective functions, which formulate optimized criteria, within the logical context of constraints.  vZ includes an incremental version of  \textcolor{red}{Maximum Resiliency (MaxRes) ~\cite{Federica2008} to Maximum Satisfiability (MaxSAT)~\cite{NarodytskaN}} and a Simplex to solve numbers without defined patterns. In Vz, MaxSAT is responsible for the restrictions, while OptSMT optimizes linear arithmetic objectives~\cite{Bjorner2015}. Vz provides functions that extend Z3 for solving optimization problems: \textit{maximize}, \textit{minimize}, and \textit{assert-soft}.
 
 \begin{itemize}
 \item{\textbf{maximize(T)}
@@ -644,14 +644,14 @@ Clustering described in Table~\ref{Experimental-results-of-the-complex-benchmark
 \label{Related-Work}
 %----------------------------------------------
 
-Since the second half of the first decade of the 2000s, three main paths have been tracked to improve or to present alternative solutions to the optimization of HW-SW partitioning, i.e., to find the exact solution ~\cite{Mann2007}, to use heuristics to speed up performance time ~\cite{Arato2003}, and hybrid ones ~\cite{Arato2005}.
+Since the second half of the first decade of the 2000s, three main paths have been tracked to improve or to present alternative solutions to the optimization of HW-SW partitioning, {\it i.e.}, to find the exact solution ~\cite{Mann2007}, to use heuristics to speed up performance time ~\cite{Arato2003}, and hybrid ones ~\cite{Arato2005}.
 
 In the first group, the exact solution to the HW-SW partitioning problem is found. The use of SMT-based verification presented in this paper can be grouped into this category, because the exact solution is found with the given algorithm. The difference is based only in terms of the technique chosen to solve the problem.
 Another path followed in past initiatives and which has had more studies is the creation of heuristics to speed up the running time of the solution. The difference between this kind of solutions and SMT-based verification is based on two facts: ESBMC is guaranteed to find the exact solution, but the heuristics are faster when the complexity is greater.
 
 Finally, there are approaches that mixes heuristics with exact solution tools. The idea is to use a heuristic to speed up some phase of an exact solution tool. It worth mentioning that the final solution is not necessarily an optimal global solution. Only the SMT-based verification is guaranteed to find the exact solution, but hybrid algorithms are faster when complexity rises.
 
-In terms of SMT-based verification, most work is restricted to present the model, its modification to programming languages (e.g., C/C++ and Java), and the application to multi-thread algorithms or to embedded systems to check for program correctness. In ~\cite{Ramalho2013} it presents a bounded model checker for C++ programs, which is an evolution of dealing with C programs and ~\cite{Cordeiro2012} uses the ESBMC model checker for embedded ANSI-C software. In~\cite{Trindade2015} and~\cite{Trindade2014} it was proven that it is possible to use ESBMC to solve HW-SW partitioning, but in a single core way. There are related studies focused on decreasing the verification time of model checkers by applying Swarm Verification ~\cite{Holzmann2011}, and modifications of internal search engines to support parallelism ~\cite{Holzmann2012}, but there is still the need for initiatives related to parallel SMT solvers ~\cite{Wintersteiger2009}. Recently, the SMT solver Z3 has been extended to pose and solve optimization problems modulo theories ~\cite{Bjorner2015}.
+In terms of SMT-based verification, most work is restricted to present the model, its modification to programming languages ({\it e.g.}, C/C++ and Java), and the application to multi-thread algorithms or to embedded systems to check for program correctness. In ~\cite{Ramalho2013} it presents a bounded model checker for C++ programs, which is an evolution of dealing with C programs and ~\cite{Cordeiro2012} uses the ESBMC model checker for embedded ANSI-C software. In~\cite{Trindade2015} and~\cite{Trindade2014} it was proven that it is possible to use ESBMC to solve HW-SW partitioning, but in a single core way. There are related studies focused on decreasing the verification time of model checkers by applying Swarm Verification ~\cite{Holzmann2011}, and modifications of internal search engines to support parallelism ~\cite{Holzmann2012}, but there is still the need for initiatives related to parallel SMT solvers ~\cite{Wintersteiger2009}. Recently, the SMT solver Z3 has been extended to pose and solve optimization problems modulo theories ~\cite{Bjorner2015}.
 
 \textcolor{Red}{The vZ tool ~\cite{Bjorner2014} and ~\cite{Bjorner2015} offer substantial improvements on optimization problems. The work described in ~\cite{Pavlinovic2015} reports compiler errors and its confuse messages, the classic approach is to show to the programmer the error location and a hint about it, however, another error sources are not considered, the most appropriate approach would be to consider all possible error sources. To model the problem the restrictions are generated using EasyOCaml, and vZ is responsible to compute the best error path. The algorithm described in ~\cite{Pavlinovic2015} shows efficient against the other approaches.}
 
