--- a/Docs/Paper/LaTex/template.tex
+++ b/Docs/Paper/LaTex/template.tex
@@ -295,7 +295,7 @@ Three different optimization and decision problems can be defined. In this paper
 s\left(1-x\right) + c|E_x| \leq S_0, 
 \end{align}
 %
-\noindent where $x$ represents the decision variable. Concerning the complexity of this problem, Arat\'o {\it et al.}~\cite{Arato2003} demonstrate that it is NP-Hard \textcolor{red}{\cite[p.~763]{Cormem}}.
+\noindent where $x$ represents the decision variable. Concerning the complexity of this problem, Arat\'o {\it et al.}~\cite{Arato2003} demonstrate that it is NP-Hard~\cite{Cormem}.
 
 %----------------------------------------------
 \section{Partitioning problem using ILP-based,Genetic Algorithms}
