--- a/Docs/Paper/LaTex/template.tex
+++ b/Docs/Paper/LaTex/template.tex
@@ -360,7 +360,7 @@ The arithmetic expressions from lines $10$ to $12$ represent the constraints des
 As computer hardware architecture moves from single- to multi-cores, parallel programming environments should be exploited to take advantage of the ability to run several threads on different processing cores. This section proposes two multi-core model checking algorithms in order to speed up the HW-SW partitioning verification if compared to the sequential solution.
 
 %----------------------------------------------
-\section{Verification Algorithm using Sequential ESBMC}
+\subsection{Verification Algorithm using Sequential ESBMC}
 \label{Verification-Algorithm-using-ESBMC}
 %----------------------------------------------
 
